# IssueLab

./: AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: agent.yml  arxiv_monitor.yml  auto_close_stale_issues.yml  ci.yml  daily_issue_health_report.yml  dispatch_agents.yml  merge_agent_pr.yml  observer.yml  orchestrator.yml  personal_agent_scan.yml  pubmed_monitor.yml  user_agent.yml
agents/: README.md
agents/Thu-ray/: agent.yml  prompt.md
agents/_registry/: gqy20.yml
agents/_template/: agent.yml
agents/arxiv_observer/: agent.yml
agents/echo/: agent.yml
agents/gqy20/: agent.yml  prompt.md
agents/moderator/: agent.yml
agents/observer/: agent.yml
agents/pubmed_observer/: agent.yml
agents/reviewer_a/: agent.yml
agents/reviewer_b/: agent.yml
agents/rojasraleena-svg/: agent.yml  prompt.md
agents/summarizer/: agent.yml
agents/test/: agent.yml
agents/video_manim/: .mcp.json  agent.yml  (+1 more)
config/: collaboration.yml  papers_recommendation_format.yml  response_format.yml
docs/: DEPLOYMENT.md  PROJECT_GUIDE.md  TECHNICAL_DESIGN.md  TESTING_TRIGGERS.md  USER_AGENT_SETUP.md  USER_QUICKSTART.md
prompts/: arxiv_observer.md  moderator.md  observer.md  reviewer_a.md  reviewer_b.md  summarizer.md  video_manim.md
scripts/: README.md  monitor_arxiv.py  monitor_pubmed.py
tests/: test_agents.py  test_custom_agents.py  test_github.py  test_gqy20_pipeline.py  test_integration.py  test_main.py  test_observer_prompt_cleaning.py  test_observer_trigger.py  test_parser.py  test_personal_scan.py  test_response_processor.py  test_sdk_executor.py
(+18 files in other folders)
